--- a/discover.html
+++ b/discover.html
@@ -85,15 +85,14 @@
                         <a href="index.html" class="logo">TMDB</a>
                         <a href="discover.html?type=movie">Movies</a>
                         <a href="discover.html?type=tv">Tv Shows</a>
-                        <a href="">People</a>
-                        <a href="">More</a>
+                        <!-- <a href="">More</a> -->
                     </nav>
                     <div class="navbar__profile">
                         <select name="lang" id="">
                             <option value="EN">EN</option>
                             <option value="ID">ID</option>
                         </select>
-                        <a id="watchlist-btn" href=""><i class="fa-solid fa-circle-user"></i></a>
+                        <a id="watchlist-btn" href="watchlist.html"><i class="fa-solid fa-circle-user"></i></a>
                         <a href=""><i class="fa-solid fa-search"></i></a>
                     </div>
                 </div>
@@ -161,7 +160,7 @@
                 <h2 id="discoverHeader">Discover</h2>
 
                 <div class="discover__grid" id="discover-results">
-
+                    Loading ...
                 </div>
             </section>
 
