--- a/details.html
+++ b/details.html
@@ -144,6 +144,7 @@
         </section>
         <section>
             <div class="container">
+                <h2>Casts</h2>
                 <div id="cast-section" class="cast-section">
                     <div class="cast__card">
                         <img src="https://placehold.co/150x200?text=Prikitiw&font=roboto" alt="Placeholder">
@@ -174,6 +175,7 @@
         </section>
         <section>
             <div class="container">
+                <h2>Recommended for you</h2>
                 <div id="recommend-section" class="recommend-section">
                     <div class="movie-card">
                         <img src="https://placehold.co/300x450?text=Movie+1&font=roboto" alt="Movie 1">
