load more, uncompleted

--- a/details.html
+++ b/details.html
@@ -81,6 +81,26 @@
             color: #666;
             font-size: 0.9rem;
         }
+
+        .tagline{
+            font-style: italic;
+        }
+
+        .details__title button{
+            outline: none;
+            border: none;
+            background-color: var(--dark-bg);
+            color: var(--text-light);
+            padding: 10px;
+            margin-top: 1rem;
+            border-radius: 100px;
+            transition: .3s;
+            cursor: pointer;
+        }
+        .details__title button:hover{
+            background-color: var(--light-bg);
+            transform: scale(1.1);
+        }
     </style>
 </head>
 
@@ -117,7 +137,7 @@
             <div class="container">
 
                 <div id="details-container" class="details__items">
-                    <img src="https://placehold.co/200x300?text=Prikitiw&font=roboto" alt="Placeholder">
+                    <!-- <img src="https://placehold.co/200x300?text=Prikitiw&font=roboto" alt="Placeholder">
                     <div class="details__info">
                         <div class="details__title">
                             <h1>Title</h1>
@@ -138,7 +158,8 @@
                                 Expedita!
                             </p>
                         </div>
-                    </div>
+                    </div> -->
+                    Loading content...
                 </div>
             </div>
         </section>
