--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                 <div class="footer__links">
                     <div class="footer__column">
                         <h4>Explore</h4>
-                        <a href="#">Movies</a>
-                        <a href="#">TV Shows</a>
-                        <a href="#">People</a>
-                        <a href="#">Trending</a>
+                        <a href="#trending-section">Trending</a>
+                        <a href="#popular-section">What's Popular</a>
+                        <a href="#top-rated-section">Top Rated</a>
+                        <a href="#now-playing-section">Now Playing</a>
                     </div>
                     <div class="footer__column">
                         <h4>Community</h4>
