--- a/index.html
+++ b/index.html
@@ -13,12 +13,25 @@
     <header>
         <div class="navbar">
             <div class="container">
-                <div class="navbar__items">
+                <div class="navbar__items navbar--mobile">
+                    <nav class="navbar__nav">
+                        <a href="" class="logo">TMDB</a>
+                    </nav>
+                    <div class="navbar__hamburger">
+                        <label for="hamburger">&#9776;</label>
+                        <input type="checkbox" name="hamburger" id="hamburger">
+                        <nav class="nav__mobile">
+                            <a href="watchlist.html">Watchlist</a>
+                            <a href="discover.html?type=movie">Movies</a>
+                            <a href="discover.html?type=tv">Tv Shows</a>
+                        </nav>
+                    </div>
+                </div>
+                <div class="navbar__items navbar--desktop">
                     <nav class="navbar__nav">
                         <a href="" class="logo">TMDB</a>
                         <a href="discover.html?type=movie">Movies</a>
                         <a href="discover.html?type=tv">Tv Shows</a>
-                        <!-- <a href="">More</a> -->
                     </nav>
                     <div class="navbar__profile">
                         <select name="lang" id="">
