--- a/discover.html
+++ b/discover.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/css/style.css">
     <style>
-        .discover {
+        /* .discover {
             padding: 2rem 0;
             color: white;
             background-color: #0b1729;
@@ -72,7 +72,7 @@
             grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
             gap: 1.5rem;
             margin-top: 1rem;
-        }
+        } */
     </style>
 </head>
 
@@ -80,12 +80,25 @@
     <header>
         <div class="navbar">
             <div class="container">
-                <div class="navbar__items">
+                <div class="navbar__items navbar--mobile">
+                    <nav class="navbar__nav">
+                        <a href="index.html" class="logo">TMDB</a>
+                    </nav>
+                    <div class="navbar__hamburger">
+                        <label for="hamburger">&#9776;</label>
+                        <input type="checkbox" name="hamburger" id="hamburger">
+                        <nav class="nav__mobile">
+                            <a href="watchlist.html">Watchlist</a>
+                            <a href="discover.html?type=movie">Movies</a>
+                            <a href="discover.html?type=tv">Tv Shows</a>
+                        </nav>
+                    </div>
+                </div>
+                <div class="navbar__items navbar--desktop">
                     <nav class="navbar__nav">
                         <a href="index.html" class="logo">TMDB</a>
                         <a href="discover.html?type=movie">Movies</a>
                         <a href="discover.html?type=tv">Tv Shows</a>
-                        <!-- <a href="">More</a> -->
                     </nav>
                     <div class="navbar__profile">
                         <select name="lang" id="">
