--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                     </div>
                 </div>
                 <div class="navbar__search">
-                    <!-- INPUT GROUP -->
-                    <input type="text" placeholder="Ini search">
+                    <input type="text" placeholder="Search...">
+                    <button id="searchBtn" type="button"><i class="fas fa-search"></i></button>
                 </div>
+
+
             </div>
         </div>
     </header>
