--- a/discover.html
+++ b/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discover</title>
     <link rel="stylesheet" href="src/css/style.css">
     <style>
         /* .discover {
@@ -135,17 +135,10 @@
                     </select>
                 </div>
 
-                <!-- <div class="filter__group">
-                    <h4>Where To Watch</h4>
-                    <label><input type="checkbox" id="available_all" checked> All providers</label>
-                    <label><input type="checkbox" id="available_streaming"> Streaming only</label>
-                </div> -->
-
                 <div class="filter__group">
                     <h4>Languages</h4>
                     <select id="languages-select">
                         <option value="">All Languages</option>
-                        <!-- Populate dynamically -->
                     </select>
                 </div>
 
@@ -161,7 +154,6 @@
                     <h4>Genres</h4>
                     <select id="genre-select">
                         <option value="">All Genres</option>
-                        <!-- Populate dynamically -->
                     </select>
                 </div>
 
@@ -179,9 +171,7 @@
 
         </div>
     </main>
-    <script type="module" src="src/js/discover.js">
-
-    </script>
+    <script type="module" src="src/js/discover.js"></script>
 </body>
 
 </html>
