--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <!-- ===== NAVBAR ===== -->
         <div class="navbar">
             <div class="container">
                 <div class="navbar__items navbar--mobile">
@@ -52,22 +53,22 @@
         </div>
     </header>
     <main>
+        <!-- ===== HERO ===== -->
         <div class="hero">
             <div class="container">
                 <div class="hero__items">
-
                     <div class="hero__title">
                         <h2>Welcome</h2>
                         <h3>Millions of movies, TV Shows, and people to discover</h3>
                     </div>
                     <div class="hero__search">
-                        <!-- INPUT GROUP (button) -->
-                        <input type="text" placeholder="Ini search bar">
+                        <input type="text" placeholder="Search for movies and tv shows">
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- ===== TRENDING ===== -->
         <section class="trending">
             <div class="container">
                 <div class="section__header">
@@ -79,11 +80,14 @@
                 </div>
                 <div class="section__items" id="trending-section">
                     <!-- Content goes here -->
+                    <p>Loading ... </p>
                     <!-- NOTES : Movie Id per item -->
                 </div>
             </div>
             </div>
         </section>
+
+        <!-- ===== POPULAR ===== -->
         <section class="popular">
             <div class="container">
                 <div class="section__header">
@@ -95,16 +99,12 @@
                 </div>
                 <div class="section__items" id="popular-section">
                     <!-- Content goes here -->
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                        <h2>iladlhaw</h2>
-                        <p>Date | Rate</p>
-                    </div>
-
+                    <p>Loading ... </p>
                 </div>
             </div>
         </section>
+
+        <!-- ===== TOP RATED ===== -->
         <section class="top-rated">
             <div class="container">
                 <div class="section__header">
@@ -116,15 +116,13 @@
                 </div>
                 <div class="section__items" id="top-rated-section">
                     <!-- Content goes here -->
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                        <h2>iladlhaw</h2>
-                        <p>Date | Rate</p>
-                    </div>
+                    <p>Loading ... </p>
+
                 </div>
             </div>
         </section>
+
+        <!-- ===== NOW PLAYING ===== -->
         <section class="now-playing">
             <div class="container">
 
@@ -137,16 +135,14 @@
                 </div>
                 <div class="section__items" id="now-playing-section">
                     <!-- Content goes here -->
-                    <div class="section__movie-card">
-                        <img src="https://img.freepik.com/free-photo/close-up-portrait-handsome-smiling-young-man-white-t-shirt-blurry-outdoor-nature_176420-6305.jpg?semt=ais_hybrid&w=740&q=80"
-                            alt="">
-                        <h2>iladlhaw</h2>
-                        <p>Date | Rate</p>
-                    </div>
+                    <p>Loading ... </p>
+
                 </div>
             </div>
         </section>
     </main>
+
+    <!-- ===== FOOTER ===== -->
     <footer class="footer">
         <div class="container">
             <div class="footer__container">
@@ -154,7 +150,6 @@
                     <h2>TMDB</h2>
                     <p>Your trusted source for movies, TV shows, and more.</p>
                 </div>
-
                 <div class="footer__links">
                     <div class="footer__column">
                         <h4>Explore</h4>
