--- a/watchlist.html
+++ b/watchlist.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Watchlist</title>
     <link rel="stylesheet" href="src/css/style.css">
     <style>
         .profile {
@@ -143,7 +143,7 @@
             <section class="profile__header">
                 <div class="profile__info">
                     <div class="profile__avatar">
-                        <i class="fa-solid fa-circle-user"></i>
+                        <a href="#" id="logout-btn"><i class="fa-solid fa-circle-user"></i></a>
                     </div>
                     <div class="profile__details">
                         <h1>My Watchlist</h1>
