--- a/details.html
+++ b/details.html
@@ -6,100 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
     <link rel="stylesheet" href="src/css/style.css">
-    <style>
-        /* .details__hero {
-            background-size: auto;
-            background-repeat: no-repeat;
-        }
-
-        .details__items {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .details__items img {
-            max-width: 200px;
-        }
-
-        .details__info {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-        }
-
-        .cast-section {
-            display: flex;
-            gap: 2rem;
-            overflow-x: auto;
-            padding: 2rem 0;
-        }
-
-        .person-card {
-            min-width: 160px;
-            max-width: 200px;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        .person-card img {
-            max-width: 100%;
-        }
-
-        .recommend-section {
-            display: flex;
-            gap: 2rem;
-            overflow-x: auto;
-        }
-
-        .movie-card {
-            min-width: 200px;
-            max-width: 250px;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .movie-card img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        .movie-card__info {
-            padding: 1rem 0;
-        }
-
-        .movie-card__info h3 {
-            margin: 0 0 0.5rem 0;
-            font-size: 1.1rem;
-        }
-
-        .movie-card__info p {
-            margin: 0;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        .tagline{
-            font-style: italic;
-        }
-
-        .details__title button{
-            outline: none;
-            border: none;
-            background-color: var(--dark-bg);
-            color: var(--text-light);
-            padding: 10px;
-            margin-top: 1rem;
-            border-radius: 100px;
-            transition: .3s;
-            cursor: pointer;
-        }
-        .details__title button:hover{
-            background-color: var(--light-bg);
-            transform: scale(1.1);
-        } */
-    </style>
+    <link rel="shortcut icon" href="src/assets/film.png" type="image/x-icon">
 </head>
 
 <body>
