--- a/discover.html
+++ b/discover.html
@@ -6,74 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover</title>
     <link rel="stylesheet" href="src/css/style.css">
-    <style>
-        /* .discover {
-            padding: 2rem 0;
-            color: white;
-            background-color: #0b1729;
-        }
-
-        .discover__container {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .discover__filters {
-            flex: 0 0 250px;
-            background: #102a43;
-            padding: 1.5rem;
-            border-radius: 8px;
-            height: fit-content;
-        }
-
-        .filter__group {
-            margin-bottom: 1.5rem;
-        }
-
-        .filter__group h4 {
-            margin-bottom: 0.5rem;
-            color: #90cea1;
-        }
-
-        .filter__group label {
-            display: block;
-            margin-bottom: 0.3rem;
-            font-size: 0.9rem;
-        }
-
-        .filter__group select,
-        .filter__group input[type="date"] {
-            width: 100%;
-            padding: 0.4rem;
-            border-radius: 4px;
-            border: none;
-            outline: none;
-            margin-bottom: 0.5rem;
-            background-color: #1b3a5c;
-            color: white;
-        }
-
-        .btn--primary {
-            background-color: #01b4e4;
-            color: white;
-            border: none;
-            padding: 0.6rem 1rem;
-            border-radius: 6px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        .discover__results {
-            flex: 1;
-        }
-
-        .discover__grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-            gap: 1.5rem;
-            margin-top: 1rem;
-        } */
-    </style>
+    <link rel="shortcut icon" href="src/assets/film.png" type="image/x-icon">
 </head>
 
 <body>
